Initial setup after copying sennet code and refactoring a bit
