# ingest-api-spec.yaml
@@ -640,6 +640,34 @@ paths:
         "500":
           description: An unexpected error occured
 
+  /metadata/validate:
+    post:
+      summary: "Validate uploaded tsv file"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                pathname:
+                  type: string
+                entity_type:
+                  type: string
+                sub_type:
+                  type: string
+                validate_uuids:
+                  type: string
+                tsv_row:
+                  type: string
+      responses:
+        '200':
+          description: The tsv file was successfully validated.
+        '400':
+          description: Missing input
+        '406':
+          description: The tsv file was not acceptable
+        '500':
+          description: Internal error
 
 servers:
   - url: "https://uuid.hubmapconsortium.org/dataingest"
